--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="hero">
     <div class="hero-content">
       <img src="assets/img/bl.png" alt="BulletPR" class="hero-img">
-      <h1 class="hero-quote">"Desde el barrio hasta tus auriculares"</h1>
+      <h1 class="hero-quote">"I AM BULLETPR"</h1>
       <a href="#proyectos" class="cta-button">Descubre mi música</a>
     </div>
   </header>
@@ -21,48 +21,63 @@
   <!-- Sobre el artista -->
   <section class="sobre-bulletpr">
       <h2>Sobre BulletPR</h2>
-      <p>BulletPR es un artista que combina la crudeza del drill con emociones reales. Sus letras nacen del asfalto, pero apuntan al alma. Vive entre dos mundos: Guinea Ecuatorial y España, y cada canción es un puente entre culturas, vivencias y visiones.</p>
+      <p>“BulletPR es un rapero y compositor afroeuropeo que combina la crudeza del drill con letras profundas, conectando culturas, vivencias y generaciones.”</p>
 
       <div class="gallery-grid">
         <div class="gallery-item"><img src="assets/img/bl1.png" alt="BulletPR 1"></div>
         <div class="gallery-item"><img src="assets/img/bl2.png" alt="BulletPR 2"></div>
         <div class="gallery-item tall"><img src="assets/img/bl3.png" alt="BulletPR 3"></div>
-        <div class="gallery-item"><img src="assets/img/b4.jpg" alt="BulletPR 4"></div>
       </div>
   </section>
 
 
   <!-- Proyectos -->
-  <section class="projects" id="proyectos">
+   <section class="projects" id="proyectos">
     <h2>Proyectos</h2>
     <div class="project-gallery">
+    
       <div class="project">
-        <img src="img/proyecto1.jpg" alt="Proyecto 1">
-        <h3>Proyecto 1</h3>
-        <p>Descripción breve del primer proyecto. Disponible en Spotify y YouTube.</p>
+        <img src="assets/img/bl9.png" alt="Portada de Proyecto 1">
+        <h3>ADJO</h3>
+        <p></p>
+        <div class="project-links">
+          <a href="https://open.spotify.com/intl-es/track/6OHRmXD1Zqh58wUcd6kGTZ?si=fca47709d5fa4679" class="btn-spotify" target="_blank"><i class="fab fa-spotify"></i></a>
+          <a href="https://www.youtube.com/watch?v=vW3AlShOtvM" class="btn-youtube" target="_blank"><i class="fab fa-youtube"></i></a>
+          <a href="https://music.apple.com/us/album/adjo-single/1745478072" class="btn-apple" target="_blank"><i class="fab fa-apple"></i></a>
+        </div>
       </div>
+
       <div class="project">
-        <img src="img/proyecto2.jpg" alt="Proyecto 2">
-        <h3>Proyecto 2</h3>
-        <p>Segundo proyecto destacado. Letras crudas y producción afilada.</p>
+        <img src="assets/img/bl10.png" alt="Portada de Proyecto 2">
+        <h3>CEQUER</h3>
+        <p></p>
+        <div class="project-links">
+          <a href="https://open.spotify.com/intl-es/track/2HJsPvU4155Crrn5gDZWsb?si=d2ea63f775a949cf" class="btn-spotify" target="_blank"><i class="fab fa-spotify"></i></a>
+          <a href="https://www.youtube.com/watch?v=UB6znRlss3s" class="btn-youtube" target="_blank"><i class="fab fa-youtube"></i></a>
+          <a href="https://music.apple.com/us/album/ceqcer-single/1749067924" class="btn-apple" target="_blank"><i class="fab fa-apple"></i></a>
+        </div>
       </div>
+
+      <!-- Agrega más proyectos igual -->
+    
     </div>
   </section>
+
 
   <!-- Contacto -->
    <section class="contacto" id="contacto">
       <div class="contacto-contenido">
         <h2>Conecta con el sonido</h2>
-        <p>Sígueme, escucha, comparte. Donde vibra el drill... ahí estoy.</p>
+        <p></p>
 
         <div class="redes-sociales">
-          <a href="https://instagram.com/bulletpr" target="_blank" class="social-link instagram">
+          <a href="https://www.instagram.com/_bulletpr?igsh=OTYydmVrdXdqMnBq" target="_blank" class="social-link instagram">
             <i class="fab fa-instagram"></i> Instagram
           </a>
-          <a href="https://open.spotify.com/artist/bulletpr" target="_blank" class="social-link spotify">
+          <a href="https://www.youtube.com/redirect?event=channel_description&redir_token=QUFFLUhqbGNXWEZkQVpiQUVKckhmNlZCUVZzSUczM0FrQXxBQ3Jtc0ttWjZfSzE5THFIbm0tYVUtaDdZd0ZLaFR6U0dReklraHpPQkx3U3pmMzhPMmlYN1lfc3dZMVR0OHVKWV94cVI2RkhTYkZueXJjblpaUTFfOFk2bjdHd0JLZC1PaHkzUjRiRFpQYTNfMnJMOV9xVmNxMA&q=https%3A%2F%2Fopen.spotify.com%2Fartist%2F4Tun8KsVNwaVFDX02bS3ew%3Fsi%3D83mGDxiYTKKgiHmsYgqsuQ" target="_blank" class="social-link spotify">
             <i class="fab fa-spotify"></i> Spotify
           </a>
-          <a href="https://music.apple.com/artist/bulletpr" target="_blank" class="social-link apple">
+          <a href="https://www.youtube.com/redirect?event=channel_description&redir_token=QUFFLUhqbFpPcFNjQUg1ZVFEcUxLbUtubnFFVlg5TFZld3xBQ3Jtc0ttdGZNdFBQX2JvTzZPQkVuVWVoQ0ttNVZOSHIzY2RBdW5senhXYmNRZmpKYlY0T1hsTjFuUmZXTDYtTTNlVjk3RlVoei1jazBDQXBkZDJ2Qm5IWmlVaExIZzZqczIzbXZNSkEtbmZrWEY0dVh4Vzhudw&q=https%3A%2F%2Fmusic.apple.com%2Fus%2Fartist%2Fbulletpr%2F1661830767" target="_blank" class="social-link apple">
             <i class="fab fa-apple"></i> Apple Music
           </a>
         </div>
@@ -72,7 +87,7 @@
 
   <!-- CTA Final -->
   <footer class="cta-final">
-    <h2 class="cta-titulo-final">¿Listo para sentir el sonido de la calle?</h2>
+    <h2 class="cta-titulo-final"></h2>
     <p class="cta-texto-final">Sígueme, escucha y forma parte del viaje de BulletPR.</p>
     <a href="#proyectos" class="cta-boton-final"><span>🔥 Escucha ahora</span></a>   
   </footer>
