--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
           <a href="https://www.instagram.com/_bulletpr?igsh=OTYydmVrdXdqMnBq" target="_blank" class="social-link instagram">
             <i class="fab fa-instagram"></i> Instagram
           </a>
-          <a href="https://www.youtube.com/redirect?event=channel_description&redir_token=QUFFLUhqbGNXWEZkQVpiQUVKckhmNlZCUVZzSUczM0FrQXxBQ3Jtc0ttWjZfSzE5THFIbm0tYVUtaDdZd0ZLaFR6U0dReklraHpPQkx3U3pmMzhPMmlYN1lfc3dZMVR0OHVKWV94cVI2RkhTYkZueXJjblpaUTFfOFk2bjdHd0JLZC1PaHkzUjRiRFpQYTNfMnJMOV9xVmNxMA&q=https%3A%2F%2Fopen.spotify.com%2Fartist%2F4Tun8KsVNwaVFDX02bS3ew%3Fsi%3D83mGDxiYTKKgiHmsYgqsuQ" target="_blank" class="social-link spotify">
+          <a href="https://open.spotify.com/intl-es/artist/4Tun8KsVNwaVFDX02bS3ew?si=83mGDxiYTKKgiHmsYgqsuQ&nd=1&dlsi=a35313cf02174c91" target="_blank" class="social-link spotify">
             <i class="fab fa-spotify"></i> Spotify
           </a>
-          <a href="https://www.youtube.com/redirect?event=channel_description&redir_token=QUFFLUhqbFpPcFNjQUg1ZVFEcUxLbUtubnFFVlg5TFZld3xBQ3Jtc0ttdGZNdFBQX2JvTzZPQkVuVWVoQ0ttNVZOSHIzY2RBdW5senhXYmNRZmpKYlY0T1hsTjFuUmZXTDYtTTNlVjk3RlVoei1jazBDQXBkZDJ2Qm5IWmlVaExIZzZqczIzbXZNSkEtbmZrWEY0dVh4Vzhudw&q=https%3A%2F%2Fmusic.apple.com%2Fus%2Fartist%2Fbulletpr%2F1661830767" target="_blank" class="social-link apple">
+          <a href="https://music.apple.com/us/artist/bulletpr/1661830767" target="_blank" class="social-link apple">
             <i class="fab fa-apple"></i> Apple Music
           </a>
         </div>
