--- a/index.html
+++ b/index.html
@@ -92,5 +92,8 @@
     <a href="#proyectos" class="cta-boton-final"><span>🔥 Escucha ahora</span></a>   
   </footer>
   </div>
+  <div id="suspension-message" class="fixed top-0 left-0 w-full bg-red-600 text-white text-center py-2 z-50 shadow-md">
+   Proyecto temporalmente suspendido por falta de respuesta del artista. Para más información, contactar con el desarrollador.
+  </div>
 </body>
 </html>
