--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </footer>
   </div>
   <div id="suspension-message" class="fixed top-0 left-0 w-full bg-red-600 text-white text-center py-2 z-50 shadow-md">
-   Proyecto temporalmente suspendido por falta de respuesta del artista. Para más información, contactar con el desarrollador.
+   🛠️ Sitio en mantenimiento. Estamos realizando mejoras para ofrecer una mejor experiencia. Gracias por tu comprensión.
   </div>
 </body>
 </html>
